Updating SDK to v9.1.1

--- a/app/index.html
+++ b/app/index.html
@@ -31,10 +31,10 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-  <script src="//cdn.split.io/sdk/split-7.1.1.min.js"></script>
+  <script src="//cdn.split.io/sdk/split-9.1.1.min.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <!-- <script src="services/splitio.js"></script> -->
+  <script src="services/splitio.js"></script> 
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
